<resources>
    <string name="app_name">Brewer</string>
    <string name="abv_x">Abv: %s%%</string>
    <string name="ebc_x">Ebc: %s</string>
    <string name="ibu_x">Ibu: %s</string>
    <string name="all_beers">All Beers</string>
    <string name="since_x">Since: %s</string>
    <string name="ph_x">Ph: %s</string>
    <string name="srm_x">Srm: %s</string>
    <string name="target_og_x">OG: %s</string>
    <string name="target_fg_x">FG: %s</string>
    <string name="favorites">Favorites</string>
    <string name="sort_by_abv">Sort by ABV</string>
    <string name="sort_by_ibu">Sort by IBU</string>
    <string name="sort_by_ebc">Sort by EBC</string>
    <string name="sort_by_ids">Sort by IDs</string>
</resources>